# chip8-rust

./: Cargo.toml
src/: main.rs
src/tools/: describe.rs  opcodesToProgram.rs  programToOpcodes.rs
